syntax = "proto3";

package core;

message HandlerDevice {
  bytes DevEUI = 1;
  message PersonalizedData {
    bytes NwkSKey = 1;
    bytes AppSKey = 2;
  }
  message ActivatedData {
    bytes AppKey = 1;
  }
  oneof Data {
    PersonalizedData Personalized = 2;
    ActivatedData Activated = 3;
  }
}

message HandlerListDevicesReq {
  bytes AppEUI = 1;
}

message HandlerListDevicesRes {
  repeated HandlerDevice Devices = 1;
}

message HandlerUpsertDeviceReq {
  bytes AppEUI = 1;
  HandlerDevice Device = 2;
}

message HandlerUpsertDeviceRes {
}

service HandlerManager {
  rpc List(HandlerListDevicesReq) returns (HandlerListDevicesRes);
  rpc Upsert(HandlerUpsertDeviceReq) returns (HandlerUpsertDeviceRes);
}
